--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -5,6 +5,12 @@
     <item android:id="@+id/maps_item"
         android:title="@string/maps" />
 
+    <item android:id="@+id/account_item"
+        android:title="@string/account" />
+
+    <item android:id="@+id/logout_item"
+        android:title="@string/logout" />
+
     <item
         android:id="@+id/refresh_button"
         android:icon="@drawable/refresh_icon"
