--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,11 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/maps_item"
-        android:title="@string/maps" />
-
     <item android:id="@+id/account_item"
         android:title="@string/account" />
+
+    <item android:id="@+id/game_item"
+        android:title="@string/game" />
+
+    <item android:id="@+id/maps_item"
+        android:title="@string/maps" />
 
     <item android:id="@+id/logout_item"
         android:title="@string/logout" />
