Improved with cart

--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -19,10 +19,9 @@
                 android:id="@+id/itemImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 android:layout_margin="10dp"
+                android:maxHeight="400dp"
+                android:maxWidth="300dp"
                 app:srcCompat="@drawable/google_sign" />
 
             <TextView
